kustomize_app/base/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod
  name: web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 3000
      # - path: /web2
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: web2
      #       port:
      #         number: 3000     
      # - path: /metrics
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: web3
      #       port:
      #         number: 3000
